Improved query for stars in cubes.

--- a/Query.ipynb
+++ b/Query.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import getpass\n",
+    "\n",
+    "import numpy as np\n",
     "import splusdata \n",
     "import pandas as pd\n",
-    "from astropy.table import Table\n"
+    "from astropy.table import Table\n",
+    "import astropy.units as u"
    ]
   },
   {
@@ -41,19 +45,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "finished\n"
+      "0.055311463772814394 deg\n"
      ]
     }
    ],
    "source": [
-    "table = conn.query('select id, ra, dec from dr2.detection_image where ra + dec > 200')"
+    "ps = 0.55 * u.arcsec / u.pix\n",
+    "size = 256 * u.pix\n",
+    "r = np.sqrt(2) * size * ps # arcsec\n",
+    "r = r.to(u.degree)\n",
+    "\n",
+    "tablename = os.path.join(context.home_dir,\n",
+    "                     \"tables/Literature_new_phot_structural_parameters_8arcsec_class_star.fits\")\n",
+    "table = Table.read(tablename)\n",
+    "for i, t in enumerate(table):\n",
+    "    ra0 = t[\"ALPHA_J2000\"]\n",
+    "    dec0 = t[\"DELTA_J2000\"]\n",
+    "    qtable = conn.query(f\"\"\"SELECT det.id, det.ra, det.dec \n",
+    "                            FROM dr2.detection_image as det \n",
+    "                            JOIN dr2_vacs.star_galaxy_quasar as sgq ON (sgq.ID = det.ID)\n",
+    "                            WHERE (sgq.PROB_STAR>0.8) \n",
+    "                            AND 1=CONTAINS( POINT('ICRS', det.ra, det.dec), CIRCLE('ICRS', {ra0}, {dec0}, {r.to(u.degree).value}) )\"\"\")"
    ]
   },
   {
@@ -278,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
