alteração para mascarar

--- a/Query.ipynb
+++ b/Query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,14 @@
     "import splusdata \n",
     "import pandas as pd\n",
     "from astropy.table import Table\n",
-    "import astropy.units as u"
+    "import astropy.units as u\n",
+    "\n",
+    "import context"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,435 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "ERROR :  Can not format properly the job \"1629348886400\"!\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n",
-      "finished\n"
+     "ename": "NameError",
+     "evalue": "name 'context' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-c20e584d3bf9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mu\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdegree\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m tablename = os.path.join(context.home_dir,\n\u001b[0m\u001b[0;32m      7\u001b[0m                      \"tables/Literature_new_phot_structural_parameters_8arcsec_class_star.fits\")\n\u001b[0;32m      8\u001b[0m \u001b[0mtable\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTable\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtablename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'context' is not defined"
      ]
     }
    ],
@@ -498,11 +83,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<i>Table length=0</i>\n",
+       "<table id=\"table1599822414752\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>ID</th><th>RA</th><th>DEC</th></tr></thead>\n",
+       "<thead><tr><th>bytes1</th><th>float64</th><th>float64</th></tr></thead>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=0>\n",
+       "  ID      RA     DEC  \n",
+       "bytes1 float64 float64\n",
+       "------ ------- -------"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    " qtable"
+    "Result = conn.query(qtable)"
    ]
   },
   {
@@ -631,12 +237,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print"
+    "My_Query = f\"\"\"SELECT det.ID, det.ra, det.dec, sgq.model_flag, sgq.PROB_STAR\n",
+    "               FROM dr2.detection_image as det\n",
+    "               JOIN dr2_vacs.star_galaxy_quasar as sgq ON (sgq.ID = det.ID)\n",
+    "               WHERE sgq.PROB_STAR>0.8\"\"\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "Result = conn.query(My_Query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<i>Table length=5</i>\n",
+       "<table id=\"table1599815497712\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>ID</th><th>RA</th><th>DEC</th><th>model_flag</th><th>PROB_STAR</th></tr></thead>\n",
+       "<thead><tr><th>bytes24</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th></tr></thead>\n",
+       "<tr><td>DR2.SPLUS-s02s02.030119</td><td>325.8991916193842</td><td>-1.2974507493112588</td><td>0</td><td>1.0</td></tr>\n",
+       "<tr><td>DR2.SPLUS-s02s02.030923</td><td>326.53188027104017</td><td>-1.2750540542467692</td><td>0</td><td>0.87</td></tr>\n",
+       "<tr><td>DR2.SPLUS-s02s02.031072</td><td>326.43062767236523</td><td>-1.270938089757464</td><td>1</td><td>0.99</td></tr>\n",
+       "<tr><td>DR2.SPLUS-s02s02.031443</td><td>325.4304072564945</td><td>-1.2603248822676614</td><td>0</td><td>1.0</td></tr>\n",
+       "<tr><td>DR2.SPLUS-s02s02.033083</td><td>326.5812149102365</td><td>-1.2153678306478275</td><td>1</td><td>0.9</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=5>\n",
+       "           ID                    RA         ... model_flag PROB_STAR\n",
+       "        bytes24               float64       ...   int64     float64 \n",
+       "------------------------ ------------------ ... ---------- ---------\n",
+       "DR2.SPLUS-s02s02.030119   325.8991916193842 ...          0       1.0\n",
+       "DR2.SPLUS-s02s02.030923  326.53188027104017 ...          0      0.87\n",
+       "DR2.SPLUS-s02s02.031072  326.43062767236523 ...          1      0.99\n",
+       "DR2.SPLUS-s02s02.031443   325.4304072564945 ...          0       1.0\n",
+       "DR2.SPLUS-s02s02.033083   326.5812149102365 ...          1       0.9"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Result[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
